syntax="proto3";

option go_package = "./proto";

package grpc_service;

message NoParams{};
message HelloRequest{
    string name = 1;
};
message HelloResponse{
    string message = 1;
};
message Lists {
    repeated string listItem = 1;
}
message MessageLists{
    repeated string message = 1;
}

service GrpcService{
    rpc GetHello(NoParams) returns (HelloResponse) {};

    rpc ServerStreaming(Lists) returns (stream HelloResponse);

    rpc ClientStreaming(stream HelloRequest) returns (MessageLists);

    rpc BidirectionalStreaming (stream HelloRequest) returns (stream HelloResponse);
}